// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quiz resolver createQuiz 1`] = `
Object {
  "id": 7,
  "name": "new",
  "type": "pc",
}
`;

exports[`Quiz resolver deleteQuiz existing quiz 1`] = `3`;

exports[`Quiz resolver deleteQuiz non-existing quiz 1`] = `"ERROR"`;

exports[`Quiz resolver quizzes 1`] = `
Array [
  Object {
    "id": 1,
    "name": "quiz one",
    "type": "pc",
  },
  Object {
    "id": 2,
    "name": "quiz two",
    "type": "pc",
  },
  Object {
    "id": 3,
    "name": "quiz three",
    "type": "pc",
  },
  Object {
    "id": 4,
    "name": "quiz four",
    "type": "pc",
  },
  Object {
    "id": 5,
    "name": "quiz five",
    "type": "pc",
  },
  Object {
    "id": 6,
    "name": "quiz six",
    "type": "pc",
  },
]
`;

exports[`Quiz resolver updateQuiz 1`] = `
Object {
  "id": 1,
  "name": "updated",
  "type": "pc",
}
`;
